--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ h2, h3 {
     font-weight: 300;
 }
 
+.completed-text {
+  text-decoration: line-through;
+}
+
 #nav {
   max-width: 700px;
   margin: 30px auto 0 auto;
@@ -56,7 +60,8 @@ h2, h3 {
   transform: translateX(-50%);
   max-width: 700px;
   width: 70%;
-  background-color: black;
+  background-color: #EDEDED;
+  border: 1px solid black;
 }
 
 form textarea {
@@ -92,6 +97,7 @@ article {
   height: 50px;
   transition: background-color .2s ease-in-out, border-bottom .2s ease-in-out;
   border-bottom: 1px solid #EDEDED;
+  white-space: nowrap;
 }
 
 article:hover {
@@ -99,30 +105,48 @@ article:hover {
   background-color: #EDEDED;
 }
 
+article:hover .completed-button {
+  opacity: 1;
+}
+
+article:hover .close {
+  opacity: 1;
+}
+
 #submit-button, .close {
-  color: #FAFAFA;
+  color: black;
   font-size: 34px;
   margin-top: 3px;
   float: right;
   transition: text-shadow .2s ease-in-out, color .2s ease-in-out;
 }
 
+.completed-button, .close {
+  opacity: 0;
+}
+
 .completed-button {
-  color: #FAFAFA;
+  color: black;
   font-size: 34px;
   margin-top: 3px;
-  /* float: left; */
+  float: left;
   display: inline-block;
-  transition: text-shadow .2s ease-in-out, color .2s ease-in-out;
+  transition: text-shadow .2s ease-in-out, color .2s ease-in-out, opacity .2s ease-in-out;
 }
 
 .todo-list-text {
   display: inline-block;
+  text-decoration: inherit;
+  width: 80%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 25px;
   /* float: left; */
 }
 
 button:hover {
-  text-shadow: 0px 0px 10px #D1D1D1;
+  text-shadow: 2px 2px 20px #D1D1D1;
   color: white;
   cursor: pointer;
 }
