--- a/style.css
+++ b/style.css
@@ -168,16 +168,6 @@ article:hover .close {
   transition: text-shadow .2s ease-in-out, color .2s ease-in-out, opacity .2s ease-in-out;
 }
 
-@media only screen and (max-width: 750px) {
-	.completed-button {
-    opacity: 1;
-  }
-
-  .close {
-    opacity: 1;
-  }
-}
-
 .todo-list-text {
   display: inline-block;
   text-decoration: inherit;
@@ -187,6 +177,20 @@ article:hover .close {
   text-overflow: ellipsis;
   line-height: 25px;
   /* float: left; */
+}
+
+@media only screen and (max-width: 750px) {
+	.completed-button {
+    opacity: 1;
+  }
+
+  .close {
+    opacity: 1;
+  }
+
+  .todo-list-text {
+    width: 50%;
+  }
 }
 
 button:hover {
